fixed spacing in skiing

--- a/clean_blog_page/css/custom.css
+++ b/clean_blog_page/css/custom.css
@@ -34,6 +34,10 @@ p.gray{
 	margin-bottom: 30px;
 }
 
+.space_blank {
+    margin: 30px;
+}
+
 .black_background {
 	background-color: #333;
 	color: #fff;
